<resources>
    <string name="app_name">iQScanner</string>
    <string name="seat">seat</string>
    <string name="scanner_ready">READY TO SCAN</string>
    <string name="scanner_accept">ENTRY ALLOWED</string>
    <string name="scanner_deny">ENTRY DENIED</string>
    <string name="exit" translatable="false">⬅</string>
    <string name="loading">Loading…</string>
    <string name="not_speakable">This element has no text attached</string>
    <string name="enter_scanmode">Enter scan mode</string>
    <string name="error_title">NOT FOUND</string>
    <string name="error_subtitle">I swear there was something there…</string>
    <string name="offline_title">You are offline!</string>
    <string name="scanner_static_show">"Show: "</string>
    <string name="scanner_static_starts_in">"Show starts in "</string>
    <string name="scanner_undefined">LOADING</string>
    <string name="feedback">Feedback</string>
    <string name="beta">BETA!</string>
    <string name="dear_employee_title">Hi,</string>
    <string name="dear_employee_body">this app is currently under developement. If you encounter any issues or get any ideas for function this app lacks, please use the feedback button / email me at itoncek@itoncek.space. Thanks for your help testing this application 💙</string>
    <string name="iqlandia" translatable="false">iQLandia</string>
    <string name="iqplanet" translatable="false">iQPlanetárium</string>
    <string name="iqpark" translatable="false">iQPark</string>
    <string name="knowledge_book_title">Knowledge Book</string>
    <string name="scanner_dupl">OPAKOVANÉ NAČTENÍ</string>
    <string name="unhinged_message_1">You don\'t need to look, there is nothing there</string>
    <string name="unhinged_message_2">Where are you looking, aren\'t you supposed to do something?</string>
    <string name="unhinged_message_3">Management said, get back to work!</string>
    <string name="unhinged_message_4">There is no hidden meaning here.</string>
    <string name="unhinged_message_5">This is just space filling junk, nothing else.</string>
    <string name="unhinged_message_6">Stop looking!</string>
    <string name="unhinged_message_7">Why are you even here?</string>
    <string name="unhinged_message_8">Rover is rovering, gyroscope is gyroscoping and you are slacking</string>
    <string name="unhinged_message_9">Why even bother pressing these?</string>
    <string name="unhinged_message_10">Behind you :)</string>
    <string name="unhinged_message_11">The code is as easy as abc.</string>
    <string name="unhinged_message_12">Where did I put my NULL pointer again?</string>
    <string name="unhinged_message_13" translatable="false">[object Object]</string>
    <string name="unhinged_message_14" translatable="false">:)</string>
    <string name="unhinged_message_15">Get back to work! There is nothing here</string>
    <string name="secret_button">Secret button</string>
    <string name="kb_kosmo_zrcadlo">Měsíční zrcadlo</string>
</resources>