<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/deep_blue"
    tools:context=".disambiguation.MainActivity">

    <TextView
        android:id="@+id/date"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:fontFamily="@font/semibold"
        android:text="@string/loading"
        android:textAlignment="textStart"
        android:textColor="@color/iqprimary"
        android:textSize="34sp"
        app:layout_constraintEnd_toStartOf="@+id/fwd"
        app:layout_constraintStart_toEndOf="@+id/bck"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/fwd"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginTop="-4dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="-4dp"
        android:backgroundTint="@color/background"
        android:contentDescription="@string/not_speakable"
        android:src="@drawable/google_baseline_arrow_forward_24"
        app:layout_constraintBottom_toBottomOf="@+id/date"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/date" />

    <ImageButton
        android:id="@+id/bck"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="-4dp"
        android:layout_marginBottom="-4dp"
        android:backgroundTint="@color/background"
        android:contentDescription="@string/not_speakable"
        android:src="@drawable/google_baseline_arrow_back_24"
        app:layout_constraintBottom_toBottomOf="@+id/date"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/date"
        app:layout_constraintVertical_bias="1.0" />

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:contentDescription="@string/not_speakable"
        app:layout_constraintBottom_toTopOf="@+id/feedback"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/date">

        <LinearLayout
            android:id="@+id/scroll"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/not_speakable"
            android:divider="@null"
            android:dividerHeight="10dp"
            android:orientation="vertical">

        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/feedback"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:fontFamily="@font/semibold"
        android:text="@string/feedback"
        android:textColor="@color/iqprimary"
        android:textSize="20sp"
        app:cornerRadius="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/feedbackText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:rotation="-30"
        android:rotationX="0"
        android:rotationY="0"
        android:text="@string/beta"
        android:textColor="@color/err_fg"
        android:textSize="16sp"
        android:translationX="-8dp"
        android:translationY="18dp"
        android:translationZ="4dp"
        app:layout_constraintBottom_toTopOf="@+id/feedback"
        app:layout_constraintStart_toStartOf="@+id/feedback" />
</androidx.constraintlayout.widget.ConstraintLayout>