<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".MainCardFragment">


    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/not_speakable"
        android:src="@drawable/empty_space"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@color/iqprimary"
        app:cardCornerRadius="8dp"
        app:cardElevation="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/showTitle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="24dp"
                android:fontFamily="@font/bold"
                android:text="@string/loading"
                android:textColor="@color/background"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/showDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/normal"
                android:text="@string/loading"
                android:textColor="@color/background"
                android:textSize="14sp"
                app:layout_constraintStart_toStartOf="@+id/showTitle"
                app:layout_constraintTop_toBottomOf="@+id/showTitle" />

            <TextView
                android:id="@+id/occupancy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:fontFamily="@font/normal"
                android:text="@string/loading"
                android:textColor="@color/background"
                android:textSize="14sp"
                app:layout_constraintStart_toStartOf="@+id/showDate"
                app:layout_constraintTop_toBottomOf="@+id/showDate" />

            <TextView
                android:id="@+id/showDuration"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:fontFamily="@font/normal"
                android:text="@string/loading"
                android:textColor="@color/background"
                android:textSize="12sp"
                app:layout_constraintBottom_toBottomOf="@+id/showDate"
                app:layout_constraintStart_toEndOf="@+id/showDate"
                app:layout_constraintTop_toTopOf="@+id/showDate" />

            <Button
                android:id="@+id/enter_scan"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="8dp"
                android:fontFamily="@font/normal"
                android:text="@string/enter_scanmode"
                android:textAlignment="center"
                android:textColor="@android:color/white"
                android:textSize="16sp"
                android:typeface="normal"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/showDate"
                app:rippleColor="@color/iqprimary" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>